// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date input nested dependant components passes through label params without breaking 1`] = `

<label class="govuk-c-label govuk-c-date-input__label"
       for="dob-day"
>
  Day
</label>
<label class="govuk-c-label govuk-c-date-input__label"
       for="dob-month"
>
  Month
</label>
<label class="govuk-c-label govuk-c-date-input__label"
       for="dob-year"
>
  Year
</label>

`;

exports[`Date input passes through fieldset params without breaking 1`] = `

<fieldset class="govuk-c-fieldset">
  <legend class="govuk-c-fieldset__legend">
    What is your date of birth?
    <span class="govuk-c-fieldset__hint">
      For example, 31 3 1980
    </span>
  </legend>
</fieldset>

`;

exports[`Date input passes through html fieldset params without breaking 1`] = `

<span class="govuk-c-error-message">
  Error message goes here
</span>

`;

exports[`Date input passes through html fieldset params without breaking 2`] = `

<fieldset class="govuk-c-fieldset">
  <legend class="govuk-c-fieldset__legend">
    What is your
    <b>
      date of birth
    </b>
    ?
    <span class="govuk-c-fieldset__hint">
      For example,
      <b>
        31 3 1980
      </b>
    </span>
  </legend>
</fieldset>

`;
